--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch: 
 
 jobs:
-  build-test:
+  test-integration:
     runs-on: ubuntu-latest
      
     steps:
@@ -23,3 +23,22 @@ jobs:
       run: npm install
     - name: Run integration tests  
       run: npm test
+    - name: Run security tests  
+      run: npm test-npm-security
+  test-security:
+    runs-on: ubuntu-latest
+     
+    steps:
+    - name: Checkout the repository
+      uses: actions/checkout@v3
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install
+    - name: Run integration tests  
+      run: npm test
+    - name: Run security tests  
+      run: npm test-npm-security
