--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,23 +8,6 @@ on:
   workflow_dispatch: 
 
 jobs:
-  test-integration:
-    runs-on: ubuntu-latest
-     
-    steps:
-    - name: Checkout the repository
-      uses: actions/checkout@v3
-    - name: Use Node.js 20.x
-      uses: actions/setup-node@v3
-      with:
-        node-version: 20.x
-        cache: 'npm'
-    - name: Install dependencies
-      run: npm install
-    - name: Run integration tests  
-      run: npm test
-    - name: Run security tests  
-      run: npm test-npm-security
   test-security:
     runs-on: ubuntu-latest
      
@@ -41,4 +24,24 @@ jobs:
     - name: Run integration tests  
       run: npm test
     - name: Run security tests  
-      run: npm test-npm-security
+      run: npm run test-npm-security
+
+  test-integration:
+    needs: test-security 
+    runs-on: ubuntu-latest
+     
+    steps:
+    - name: Checkout the repository
+      uses: actions/checkout@v3
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install
+    - name: Run integration tests  
+      run: npm test
+    - name: Run security tests  
+      run: npm run test-npm-security
+  
