--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Build, Test and Deploy
 
 on:
   push:
@@ -42,6 +42,13 @@ jobs:
       run: npm install
     - name: Run integration tests  
       run: npm test
-    - name: Run security tests  
-      run: npm run test-npm-security
-  
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test-integration
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_TOKEN }}
